--- a/index.html
+++ b/index.html
@@ -4,6 +4,39 @@
         <title>Rock Paper Scissors</title>
     </head>
 
+    <script>
+
+        function computerPlay(){
+            let computerString = null; 
+            
+            switch(Math.floor(Math.random() * 3)) { //returns a random int from 0 to 2
+                case 0:
+                    computerString = "Rock";
+                    break;
+                case 1:
+                    computerString = "Scissors";
+                    break;
+                case 2:
+                    computerString = "Paper";
+                    break;
+            }
+
+            return computerString;
+        }
+
+
+        function playRound(playerSelection, computerSelection) {
+            // your code here!
+        }
+
+
+        function capitalize(stringInput) {
+            stringInput = stringInput.toLowerCase();
+            return stringInput.charAt(0).toUpperCase() + stringInput.slice(1);
+        }
+
+    </script>
+
     <body>
 
                 
